# neutrino

./: .gitignore  Cargo.toml  Dockerfile  README.md  VERIFY-diagramming-app.md  entrypoint.sh  unused-apis.md
.cargo/: config.toml
.github/workflows/: ghcr-publish.yml
agent_docs/: Version-Saving-Refactor.md  admin.md  calendar-reminder-app.md  developer_workflow.md  docs-feature-gaps.md  drawing-feature.md  e2e-coverage-gaps.md  end-to-end-encryption.md  feature-sheet-charts.md  grammar_checker.md  key-rotation.md  neutrion-diagramming-app.md  note-taking-app.md  photo_editing.md  search.md  shared end-to-end encryption.md  sheet_functions.md  sheets-conditional-formatting.md  web-refactor.md
agent_docs/plans/: 2026-06-08-diagramming-app.md  feature-custom-fonts-verification.md  feature-custom-fonts.md  feature-docs-layout-structure-verification.md  feature-docs-layout-structure.md  feature-e2e-encryption-verification.md  feature-e2e-encryption.md  feature-office-doc-inplace-editing.md  feature-offline-mode-docs-sheets.md  feature-search.md  feature-sheets-template-gallery-verification.md  feature-sheets-template-gallery.md  photos-app-verification.md  photos-app.md
docs/plans/: feature-db-backed-feature-flags.md  feature-docs-advanced-formatting-verification.md  feature-docs-advanced-formatting.md  feature-drive-area-drop-target-verification.md  feature-drive-area-drop-target.md  feature-sheets-phase1-charts-verification.md  feature-sheets-phase1-charts.md  feature-sheets-phase2-charts-verification.md  feature-sheets-phase2-charts.md  feature-sheets-phase5-charts.md
e2e/: .env.example  .gitignore  README.md  docker-compose-test.yml  global-setup.ts  global-teardown.ts  package-lock.json  package.json  playwright.config.ts  tsconfig.json
e2e/fixtures/: base.ts  sample.docx  sample.pptx  sample.xlsx
e2e/nginx/: neutrino-proxy-test.conf
e2e/scripts/: build-images.sh  run-tests.sh
migrations/00005_auth__2025-01-01-000004_create_user_profiles/: up.sql
migrations/00006_auth__2026-04-19-000005_add_public_key_to_users/: down.sql  up.sql
migrations/00018_calendar__2026-05-14-000002_migrate_tasks_drop_list_id/: up.sql
migrations/00055_drive__2026-04-02-000034_add_is_named_to_file_versions/: down.sql  up.sql
migrations/00056_drive__2026-04-02-000035_create_tags/: down.sql  up.sql
migrations/00057_drive__2026-04-19-000036_create_file_key_refs/: down.sql  up.sql
migrations/00058_drive__2026-04-19-000037_add_encrypted_metadata_to_files/: up.sql
migrations/00059_drive__2026-05-19-000038_create_service_registrations/: down.sql  up.sql
migrations/00079_sheets__2025-01-01-000017_create_named_ranges/: down.sql  up.sql
migrations/00081_slides__2025-01-01-000019_create_slide_themes/: down.sql  up.sql
migrations/00082_slides__2025-01-01-000020_create_slide_templates/: down.sql  up.sql
scripts/: export_old_databases.py
src/: config.rs  main.rs  schema.rs
src/auth/: api.rs  dto.rs  service.rs  (+3 more)
web/: .dockerignore  .gitignore  .pnpmrc  .prettierignore  CLAUDE.md  Dockerfile  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  turbo.json  vitest.config.ts  vitest.setup.ts
worker/: Cargo.toml
worker/src/: crypto.rs  face.rs  main.rs  schema.rs  tasks.rs
xtask/: Cargo.toml
(+806 files in other folders)
