[package]
name = "neutrino"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
actix-web = "4"
actix-cors = "0.7.1"
actix-ws = "0.3"
actix-multipart = "0.7"
actix-files = "0.6"

# Database
diesel = { version = "2", features = ["sqlite", "r2d2", "chrono"] }
diesel_migrations = "2"
libsqlite3-sys = { version = "0.27", features = ["bundled"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Auth / security
jsonwebtoken = "9"
argon2 = "0.5"
rand_core = { version = "0.6", features = ["getrandom"] }
rand = "0.8"
totp-rs = { version = "5", features = ["gen_secret", "otpauth"] }
base32 = "0.4"
aes-gcm = "0.10"
sha2 = "0.10"
hex = "0.4"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Utilities
uuid = { version = "1", features = ["v4"] }
dotenvy = "0.15"
futures-util = "0.3"
async-trait = "0.1"
dashmap = "6"
base64 = "0.22"
mime_guess = "2"
mime = "0.3"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "gif", "webp", "bmp", "tiff"] }
zip = "2"
regex = "1"
libc = "0.2"
url = "2"

# HTTP client
reqwest = { version = "0.12", features = ["json", "multipart"] }

# Logging / tracing
tracing = "0.1.44"
log = "0.4"
tracing-subscriber = {version = "0.3.22", features=["time", "env-filter"]}
tracing-appender = "0.2.4"


# API docs
utoipa = { version = "4", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "6", features = ["actix-web"] }
thiserror = "1"

# Calendar features
ical = "0.10"
quick-xml = "0.36"

# Docs collaboration
yrs = "0.22"

# Email
lettre = { version = "0.11", default-features = false, features = ["smtp-transport", "tokio1-rustls-tls", "hostname", "builder"] }